alignment fix

--- a/src/Components/Slideup.css
+++ b/src/Components/Slideup.css
@@ -4,4 +4,6 @@
     bottom: 0px;
     left: 0px;
     right: 0px;
+    text-align: center;
+    background-color: white;
 }
